add infinite snowballs add armor drop on hit support java 8 fix 1.16 support improve performance